force-app/main/default/objects/Foster_Appointment__c/Foster_Appointment__c.object-meta.xml
<CustomObject>
    <label>Foster Appointment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>F/A ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foster Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>