force-app/main/default/objects/Foster_Appointment__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Foster Appointments</relationshipLabel>
    <relationshipName>Foster_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>