force-app/main/default/objects/Foster_Appointment__c/fields/Animal_ID_Appt__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID_Appt__c</fullName>
    <formula>Animal__r.Animal_Name_Id__c &amp;&quot;: &quot;&amp; Appointment_Details__c</formula>
    <label>Animal ID/Appt</label>
    <type>Text</type>
</CustomField>