force-app/main/default/objects/Foster_Appointment__c/fields/Appointment_Details__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Details__c</fullName>
    <label>Appointment Details</label>
    <type>TextArea</type>
</CustomField>