force-app/main/default/objects/Foster_Appointment__c/fields/Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Location__c</fullName>
    <label>Appointment Location</label>
    <type>TextArea</type>
</CustomField>