force-app/main/default/objects/Foster_Appointment__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>